# profkit-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmark/: CMakeLists.txt  overhead.cpp
examples/: CMakeLists.txt
examples/basic/: main.cpp
examples/empty_dump/: main.cpp
examples/multiple_sessions/: main.cpp
examples/multithread/: main.cpp
examples/push_pop/: main.cpp
examples/single_include/: main.cpp
include/profkit/: profiler.hpp
scripts/: make_single_include.py
single_include/: profkit.hpp
src/: profiler.cpp
tools/: format_all.sh
